--- a/.github/workflows/ci-legacy.yaml
+++ b/.github/workflows/ci-legacy.yaml
@@ -7,9 +7,9 @@ on:
 
 env:
   AWS_REGION: us-west-2
-  IMAGE_NAME: regmicmahesh/nestjs-cicd-template:${{ github.ref_name }}-${{ github.sha }}
-  LEGACY_IMAGE_NAME: regmicmahesh/nestjs-cicd-template:${{ github.ref_name }}-${{ github.sha }}-legacy
-  BASE_IMAGE_NAME: regmicmahesh/node-18-bookworm:${{ github.ref_name }}
+  IMAGE_NAME: ghcr.io/regmicmahesh/nestjs-cicd-template:${{ github.ref_name }}-${{ github.sha }}
+  LEGACY_IMAGE_NAME: ghcr.io/regmicmahesh/nestjs-cicd-template:${{ github.ref_name }}-${{ github.sha }}-legacy
+  BASE_IMAGE_NAME: ghcr.io/regmicmahesh/node-18-bookworm:${{ github.ref_name }}
 
 jobs:
   build-and-push:
@@ -19,11 +19,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
-        run: make docker/login
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: 'regmicmahesh'
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Image to Production
         run: |
