--- a/.github/workflows/ci-legacy.yaml
+++ b/.github/workflows/ci-legacy.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
           registry: ghcr.io
           username: 'regmicmahesh'
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Push Image to Production
         run: |
