--- a/docker/Dockerfile.base-prod
+++ b/docker/Dockerfile.base-prod
@@ -4,4 +4,4 @@ WORKDIR /app
 
 COPY --chown=node:node package*.json yarn.lock ./
 
-RUN yarn install --frozen-lockfile
+RUN yarn install --frozen-lockfile --prune
