--- a/package.json
+++ b/package.json
@@ -25,7 +25,45 @@
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@certusone/wormhole-sdk": "0.6.2",
+    "@coinflowlabs/react": "^2.2.2",
+    "@headlessui/react": "^1.6.5",
+    "@hookform/resolvers": "^2.9.1",
+    "@nfteyez/sol-rayz": "^0.10.2",
+    "@notifi-network/notifi-react-card": "^0.35.0",
+    "@project-serum/anchor": "^0.25.0",
+    "@project-serum/borsh": "^0.2.5",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@solana/spl-token": "^0.2.0",
+    "@solana/wallet-adapter-base": "^0.9.5",
+    "@solana/wallet-adapter-react": "^0.15.5",
+    "@solana/wallet-adapter-react-ui": "^0.9.7",
+    "@solana/wallet-adapter-wallets": "^0.16.1",
+    "@solana/web3.js": "^1.43.6",
+    "@zebec-protocol/bulk-transfer": "^1.0.1",
+    "@zebec-protocol/wormhole-bridge": "1.0.9",
+    "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
+    "borsh": "^0.7.0",
+    "ethereumjs-util": "^7.1.5",
+    "ethers": "^5.7.2",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "next": "12.1.6",
+    "next-i18next": "^11.0.0",
+    "next-themes": "^0.2.0",
+    "papaparse": "^5.4.1",
+    "react": "17.0.2",
+    "react-datetime": "^3.1.1",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.32.2",
+    "react-redux": "^8.0.2",
+    "react-tooltip": "^4.2.21",
+    "redux-thunk": "2.4.1",
+    "tailwind-merge": "^1.3.0",
+    "wagmi": "^0.6.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
